@@ -1,5 +1,11 @@
 2007-08-19  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
+	* data/patterns/Latn-en.common-error.conf:
+	* data/patterns/Latn-en.common-error.in:
+	Remove "Spaces after capital letters" pattern.
+
+2007-08-19  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
 	* data/glade/text-assistant-common-error-page.glade:
 	Include the check buttons in the table.
 
